--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </div>
     
         <div class="home-img2">
-            <br><br><img src="./img/banner.png" alt="">
+            <br><br><img src="./img/banner.jpg" alt="">
         </div>
     
     </section>
