--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
 
                 <li><i  class="fa-duotone fa-solid fa-envelope fa-bounce" ></i>  gandhikalasi115@gmail.com</li>
 
-                <li><i  class="fa-solid fa-phone-volume fa-shake"></i>  9348605226</li>
+                <li><i  class="fa-solid fa-phone-volume fa-shake"></i> +919348605226</li>
 
             </div>
 
