--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <h3>Hello, It's Me</h3>
             <h1> Gandhi </h1>
             <h3>And I'm a <span class="text"></span></h3>
-            <p>I'm a Front-End Developer. <br/>
+            <p>I'm a Web Developer. <br/>
                 My first exposure to professional life through internship has benefited me mostly in
                 strengthening my personal skills. I have developed a positive attitude and a strong
                 sense of responsibility being innovative, resourceful, open and responsive to change. It has
@@ -83,7 +83,7 @@
 
             <p>
 
-                <b>I'm Gandhi & I'm from Bhubaneswar.<br></b>I'm an engineering Student in NIIS Institute of information science & management in Bhubaneswar . Am a fresher "BCA" Student But before joining I finished the courese I've completed Python, Django the framework and Full Stack  html,Css,sql, .Now I'm ready to apply my knowledge into practice.Though I do not have any real time working experience, I've  had a lot of exposure to the software field.My Goal is to build a successfull career as a Full Stack Developer.Moving forward in my career I hope to expand my experience across different industries.
+                <b>I'm Gandhi & I'm from Bhubaneswar.<br></b>I'm a computer science Student in NIIS Institute of information science & management in Bhubaneswar . Am a fresher "BCA" Student But before joining I finished the courese I've completed Python, Django the framework and Full Stack  html,Css,sql, .Now I'm ready to apply my knowledge into practice.Though I do not have any real time working experience, I've  had a lot of exposure to the software field.My Goal is to build a successfull career as a Full Stack Developer.Moving forward in my career I hope to expand my experience across different industries.
                                 I'm a good learner and team player
                                 That's all about my self.
                 <!-- My first exposure to professional life through internship has benefited me mostly in
